--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: Docker Image CI
 on:
   push:
     branches: [ "master-pipeline" ]
-  pull_request:
-    branches: [ "master-pipeline" ]
+#   pull_request:
+#     branches: [ "master-pipeline" ]
 
 jobs:
 
