--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 ######################################################################
 #######                DATABASE PROPERTIES                       #####
 ######################################################################
-
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql-docker:3306/fruits_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3306}/${DB_NAME:fruit_db}?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
