--- a/kubernetes/application/mysql-service.yaml
+++ b/kubernetes/application/mysql-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1                 # Kubernetes API version
 kind: Service                  # Kubernetes' resource kind we are creating
 metadata:                      # Metadata of the resource kind we are creating
-  name: mysql-service          # DNS name
+  name: mysql          # DNS name
 #  labels:
 #    app: mysql
 #    tier: database
