--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3306}/${DB_NAME:fruit_db}?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.username=${DB_USERNAME:root}
